# RynnRCP

./: CMakeLists.txt  README.md  README_cn.md  requirements.txt
common/config/: glog_config.yaml
common/lcm/: __init__.py
common/lcm/lcmMotion/: __init__.py  act_command.hpp  act_command.py  act_request.hpp  act_request.py  robot_feedback.hpp  robot_feedback.py  state_feedback.hpp  state_feedback.py
common/lcm/lcmMotion/lcm_types/: act_command.lcm  act_request.lcm  robot_feedback.lcm  state_feedback.lcm
common/lcm/lcmSensor/: __init__.py  camera_ctrl.hpp  camera_ctrl.py  camera_ctrl_response.hpp  camera_ctrl_response.py  camera_desc.hpp  camera_desc.py  camera_image_response.hpp  camera_image_response.py  camera_list_desc.hpp  camera_list_desc.py  camera_status.hpp  camera_status.py  image_data.hpp  image_data.py  req_camera_desc.hpp  req_camera_desc.py  req_camera_image.hpp  req_camera_image.py  req_camera_status.hpp  req_camera_status.py
common/lcm/lcmSensor/lcm_types/: camera_ctrl_reponse.lcm  camera_desc.lcm  camera_image_response.lcm  camera_list_desc.lcm  camera_status.lcm  ctrl_camera.lcm  image_data.lcm  req_camera_desc.lcm  req_camera_image.lcm  req_camera_status.lcm
common/proto/: RobotServerCombinePacket.proto  RobotServerData.proto  RobotServerTransportPacket.proto  TunnelTransportService.proto
example/: configure_so100.py  so100.sh
rcp_framework/cpp/common/auth_manager/: auth_manager.cpp  auth_manager.hpp
rcp_framework/cpp/common/communication/: comm_data.hpp  comm_jsonrpc.hpp  comm_mqtt.cpp  comm_mqtt.hpp  comm_type.hpp  comm_websocket.cpp  comm_websocket.hpp
rcp_framework/cpp/robot_server/: CMakeLists.txt  README.md  README_cn.md
rcp_framework/cpp/robot_server/action_server/: action_server.cpp  action_server.hpp
rcp_framework/cpp/robot_server/common/: robot_server.hpp  version.hpp
rcp_framework/cpp/robot_server/common/server/: server.cpp  server.hpp
rcp_framework/cpp/robot_server/common/terminal_device_server/: terminal_device_server.cpp  terminal_device_server.hpp
rcp_framework/cpp/robot_server/device_monitor_server/: device_monitor_server.cpp  device_monitor_server.hpp
rcp_framework/cpp/robot_server/sensor_server/: sensor_server.cpp  sensor_server.hpp
rcp_framework/robots/so100/: README.md  README_cn.md
rcp_framework/robots/so100/camera_node/: camera_node.py
rcp_framework/robots/so100/config/: cameras.yaml  device_config.yaml
rcp_framework/robots/so100/so100_servers/: CMakeLists.txt  so100_servers.cpp
robot_motion/models/franka/franka_fr3/scene/: scene.xml  scene2.xml
robot_motion/models/franka/franka_fr3/urdf/: fr3.urdf  fr3.xml  fr3_no_gripper.urdf  fr3_torque_act.xml  fr3_with_probe.xml
robot_motion/models/lerobot/lekiwi/scene/: scene.xml  scene_cube.xml
robot_motion/models/lerobot/lekiwi/urdf/: LeKiwi.xml
robot_motion/models/lerobot/so101/assets/: Third_Cam.stl  Wrist_Camera.stl
robot_motion/models/lerobot/so101/scene/: scene.xml  scene_base.xml  scene_cube.xml  scene_grip.xml
robot_motion/models/lerobot/so101/urdf/: mug.xml  so101.urdf  so101.xml  so101base.xml
robot_motion/robots/lerobot/: README.md  README_cn.md  pyproject.toml  requirements.txt  setup.py  setup_motion.sh
robot_motion/robots/lerobot/configs/: config.yaml
robot_motion/robots/lerobot/docs/: lerobot_UI.ipynb
robot_motion/robots/lerobot/interface/: base_interface.py  unified_interface.py
robot_motion/robots/lerobot/robot_devices/motors/: feetech.py  utils.py
robot_motion/robots/lerobot/robot_devices/robots/: configs.py  feetech_calibration.py  utils.py
robot_motion/robots/lerobot/scripts/: find_write_port.py  follower_calibrate.py  follower_jointsine.py  follower_show_encoder.py  lerobot_UI.py  teleop_simulation.py  unified_controller.py
robot_motion/robots/lerobot/tests/: kinematics_test.py  rcpNode.py  run_lerobot_digital_twin.sh  sample_policy.txt
robot_motion/robots/lerobot/utils/: __init__.py  ik_solver.py  interpolator_plotter.py  joint_plotter.py  lcm_handler.py  lekiwi_velocity_mapping.py  policy_interpolator.py
scripts/: deploy.sh
